force-app/main/default/objects/Quote/fields/Asset_Size_M__c.field-meta.xml
<CustomField>
    <fullName>Asset_Size_M__c</fullName>
    <formula>Opportunity.Account.Asset_Size_M__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Asset Size $M</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>