force-app/main/default/objects/Quote/fields/CPI_Percent__c.field-meta.xml
<CustomField>
    <fullName>CPI_Percent__c</fullName>
    <label>CPI%</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>