force-app/main/default/objects/Quote/fields/DDA_Share_Accounts_Count__c.field-meta.xml
<CustomField>
    <fullName>DDA_Share_Accounts_Count__c</fullName>
    <label>DDA/Share Accounts Count</label>
    <formula>Opportunity.Account.DDA_Share_Accounts_Count__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>