force-app/main/default/objects/Quote/fields/FBPS_Direct_Fintech__c.field-meta.xml
<CustomField>
    <fullName>FBPS_Direct_Fintech__c</fullName>
    <label>FBPS, Direct, Fintech</label>
    <formula>TEXT(Opportunity.Account.FBPS_Direct_Fintech__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <type>Text</type>
</CustomField>