force-app/main/default/objects/Quote/fields/FI_Location__c.field-meta.xml
<CustomField>
    <fullName>FI_Location__c</fullName>
    <label>FI Location (City/State)</label>
    <formula>Opportunity.Account.BillingCity &amp; ", " &amp; Opportunity.Account.BillingState</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <type>Text</type>
</CustomField>