force-app/main/default/objects/Quote/fields/FI_Name__c.field-meta.xml
<CustomField>
    <fullName>FI_Name__c</fullName>
    <label>FI Name</label>
    <formula>Opportunity.Account.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <type>Text</type>
</CustomField>