force-app/main/default/objects/Quote/fields/Overall_Deal_Type__c.field-meta.xml
<CustomField>
    <fullName>Overall_Deal_Type__c</fullName>
    <label>Overall Deal Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Renewal</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>