force-app/main/default/objects/Quote/fields/Pan_Fiserv__c.field-meta.xml
<CustomField>
    <fullName>Pan_Fiserv__c</fullName>
    <label>Pan-Fiserv?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>