force-app/main/default/objects/Quote/fields/Small_Business_DDAs__c.field-meta.xml
<CustomField>
    <fullName>Small_Business_DDAs__c</fullName>
    <formula>Opportunity.Account.Small_Business_DDAs__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Small Business DDAs</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>