force-app/main/default/objects/Quote/fields/Type_of_FI__c.field-meta.xml
<CustomField>
    <fullName>Type_of_FI__c</fullName>
    <label>Type of FI</label>
    <formula>TEXT(Opportunity.Account.Type_of_FI__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <type>Text</type>
</CustomField>