force-app/main/default/objects/Quote/fields/VAR_Name_Specify__c.field-meta.xml
<CustomField>
    <fullName>VAR_Name_Specify__c</fullName>
    <label>If Yes, Specify VAR name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>