force-app/main/default/objects/Quote/fields/VAR_Takeaway__c.field-meta.xml
<CustomField>
    <fullName>VAR_Takeaway__c</fullName>
    <defaultValue>false</defaultValue>
    <label>VAR Takeaway?</label>
    <type>Checkbox</type>
</CustomField>